--- a/style.css
+++ b/style.css
@@ -75,3 +75,83 @@
 .icon-banner p {
     color: #636e72;
 }
+
+ /* my failer section end */
+
+ /* my plan section start */
+
+ .plan-title {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 100px;
+    margin-bottom: 50px;
+ }
+ .all-my-plans {
+    display: flex;
+    justify-content: space-between;
+ }
+.description {
+    color: #636e72;
+}
+.plan-icon img {
+    margin-bottom: 15px;
+}
+.plan-icon h4 {
+    margin-bottom: 15px;
+}
+.plan-icon  h6 {
+    margin-bottom: 15px;
+}
+
+/* my plan section end */
+
+/* mini banner section start */
+
+.mini-banner {
+    background-image: url('./images/watch.png'), url('./images/gradient2.png');
+    height: 30vh;
+    width: 1100px;
+    background-position: right, left;
+    background-repeat: no-repeat;
+    background-blend-mode: soft-light;
+    margin:100px auto;
+    padding: 60px;
+    border-radius: 8px;
+    font-size: 20px;
+}
+.mini-banner > h3 {
+    color: #ffffff;
+    margin-bottom: 15px;
+    font-size: 30px;
+    width: 400px;
+}
+.mini-banner > button {
+    color: coral;
+    border-radius: 5px;
+    border: none;
+    padding: 12px 24px;
+    font-size: 18px;
+    margin-bottom: 20px;
+
+}
+/* mini banner section end */
+
+/* future and subscribe section start */
+.future-and-subscribe {
+    display: flex;
+    justify-content: space-between;
+    color: #ffffff;
+}
+footer{
+    background-color: black;
+    height: 400px;
+}
+.future h2{
+    margin-bottom: 15px;
+}
+.future p{
+    margin-bottom: 15px;
+}
+.subscribe  h3{
+    margin-bottom: 15px;
+}
