--- a/style.css
+++ b/style.css
@@ -49,6 +49,11 @@
 /* Banner section end */
 
 /* my failure section start */
+.container{
+    width: 1100px;
+    margin: 0 auto;
+}
+
 .secound-banner{
     display: flex;
     justify-content: space-between;
@@ -145,13 +150,31 @@
 footer{
     background-color: black;
     height: 400px;
+    padding-top: 70px;
 }
 .future h2{
     margin-bottom: 15px;
 }
 .future p{
     margin-bottom: 15px;
+    width: 450px;
 }
-.subscribe  h3{
-    margin-bottom: 15px;
+
+.subscribe h3{
+    color: orange;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.subscribe input {
+    width: 300px;
+    padding: 12px 16px;
+    background-color: black;
+    border: 2px solid #fff;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+.subscribe button{
+    color: orange;
+    padding: 10px 14px;
+    border-radius: 6px;
 }
